# vrep_ros_ws

./: README.md
src/: occgrid_planner_base.tgz
src/acpi_monitor/src/: acpi_monitor.py
src/ar_loc/launch/: test_ar.launch
src/ar_loc/nodes/: rover_loc.py
src/ar_loc/src/ar_loc/: rover_kf.py  rover_pf.py
src/ar_loc_base/launch/: test_ar.launch
src/ar_loc_base/nodes/: rover_loc.py
src/ar_loc_base/src/ar_loc_base/: rover_kf.py
src/ar_mapping/src/ar_mapping/: mapping_kf.py
src/ar_mapping_base/launch/: test_ar.launch
src/ar_mapping_base/src/ar_mapping_base/: mapping_kf.py
src/ar_slam/nodes/: turtle_slam.py
src/ar_slam/src/ar_slam/: mapping_kf.py
src/ar_slam_base/nodes/: turtle_slam.py
src/ar_slam_base/src/ar_slam_base/: mapping_kf.py
src/blob_tracker/: CMakeLists.txt  package.xml
src/blob_tracker/nodes/: camshift.py  follow_controller.py
src/blob_tracker_base/: CMakeLists.txt  package.xml
src/blob_tracker_base/launch/: blob.launch  follow.launch
src/blob_tracker_base/nodes/: camshift.py  follow_controller.py
src/collision_avoidance/: package.xml
src/collision_avoidance/src/: collision_avoidance.cpp
src/collision_avoidance_base/launch/: ca.launch
src/collision_avoidance_base/src/: collision_avoidance.cpp
src/disk_monitor/: manifest.xml
src/disk_monitor/msg/: DiskStatus.msg
src/disk_monitor/src/: disk_monitor.py
src/disk_monitor/src/disk_monitor/msg/: _DiskStatus.py  __init__.py
src/face_detect/: CMakeLists.txt  package.xml
src/face_detect_base/: CMakeLists.txt
src/face_detect_base/nodes/: rosfacedetect.py
src/floor_graph/nodes/: viz_graph.py
src/floor_mapper/: CMakeLists.txt  package.xml
src/floor_mapper/launch/: mapper.launch  projector-mushrooms.launch  projector.launch
src/floor_mapper/nodes/: floor_projector.py  floor_projector_gen.py
src/floor_mapper_base/: CMakeLists.txt  package.xml
src/floor_mapper_base/launch/: mapper.launch  projector.launch
src/floor_mapper_base/nodes/: floor_projector.py
src/floor_nav/: CMakeLists.txt
src/floor_nav/cfg/: TaskSetHeading.cfg
src/floor_nav/include/floor_nav/: SimTasksEnv.h
src/floor_nav/launch/: launch_vrep.launch
src/floor_nav/missions/: test_goto.py  test_graph-test.py  test_graph.py  test_planto.py  test_set_heading.py
src/floor_nav/src/: SimTasksEnv.cpp
src/floor_nav/tasks/: TaskTrigger.cpp
src/model_prediction/launch/: test.launch  test_rate.launch
src/model_prediction/src/: generator.py  model_prediction.py  model_prediction_rate.py
src/obstacle_avoidance/src/: obstacle_avoidance.cpp
src/obstacle_avoidance_base/src/: obstacle_avoidance.cpp
src/occgrid_planner/: CMakeLists.txt
src/occgrid_planner/launch/: planner.launch
src/occgrid_planner/src/: occgrid_planner.cpp  path_follower.cpp
src/occgrid_planner_base/: CMakeLists.txt
src/occgrid_planner_base/launch/: planner.launch
src/occgrid_planner_base/src/: occgrid_planner.cpp  path_follower.cpp
src/robot_control/cfg/cpp/robot_control/: FollowLineConfig.h  GotoXYConfig.h  GotoXYThetaConfig.h
src/robot_control/nodes/: bubble_odom.py  follow_line.py  goto_xy.py  goto_xytheta.py
src/robot_control/src/robot_control/cfg/: FollowLineConfig.py  GotoXYConfig.py  GotoXYThetaConfig.py
src/robot_control_base/cfg/cpp/robot_control_base/: FollowLineConfig.h  GotoXYConfig.h  GotoXYThetaConfig.h
src/robot_control_base/nodes/: bubble_odom.py
src/robot_control_base/src/robot_control_base/cfg/: FollowLineConfig.py  GotoXYConfig.py  GotoXYThetaConfig.py
src/rover_driver/: CMakeLists.txt  package.xml
src/rover_driver/nodes/: ipython  rover_command.py
src/rover_driver/src/rover_driver/: rover_kinematics.py
src/rover_driver_base/launch/: rover.launch  rover_odom.launch
src/rover_driver_base/nodes/: rover_command.py  rover_odom.py
src/tb_slam/nodes/: turtle_slam.py
src/vrep_common/: CMakeLists.txt  package.xml
src/vrep_gmapping/launch/: gmapping_bubblebot.launch
src/vrep_plugin/: CMakeLists.txt  package.xml
src/vrep_plugin/src/: ROS_server.cpp
src/vrep_ros_teleop/: CMakeLists.txt
src/vrep_ros_teleop/launch/: teleop.launch  teleop_mux.launch
src/vrep_ros_teleop/src/: teleop_mux.py
src/wpa_cli/: package.xml
src/wpa_cli/launch/: wpa_cli.launch
src/wpa_cli/src/: wpa_cli_node.py
